psad-2.4.4 (02//2017):
    - Bug fix to not remove auto-blocked IP's from a running psad instance
      with 'psad --Status'.
    - Updated to version 5.2.13 of the whois client.
    - Updated to IPTables::ChainMgr 1.6.

psad-2.4.3 (12/19/2015):
    - Bug fix in fwcheck_psad related to an uninitialized variable related to
      firewalld deployments.
    - Bug fix to add psad process into -K, -S, and -R handling if psad is
      reading iptables logs via journalctl. This is necessary because psad
      fork()'s an extra copy of itself when reading via journalctl.
    - Updated to IPTables::ChainMgr 1.5.

psad-2.4.2 (11/29/2015):
    - Bug fix to apply the EMAIL_ALERT_DANGER_LEVEL threshold to auto-blocking
      emails (reported by itoffshore@github).
    - Bug fix to include the META.yml file for the Unix::Syslog module. This
      issue was reported by github user itvasile as issue #26.
    - Updated IPTables::ChainMgr and IPTables::Parse to 1.4 and 1.6.1
      respectively. The IPTables::Parse update is important because of a
      security vulnerability fixed by Miloslav Trmač. This vulnerability was
      an issue where temporary files used predictable names, and this could be
      leveraged by a local attacker to overwrite any files to which the
      attacker has write permissions.
    - With the update to IPTables::Parse 1.6.1, the path to the
      iptables/ip6tables/firewall-cmd binary is worked out by the module
      directly instead of by psad.

psad-2.4.1 (05/13/2015):
    - Bug fix to honor the IGNORE_PROTOCOLS configuration variable for
      non-tcp/udp/icmp protocols. This bug was reported by Paul Versloot.
      Also extended the IGNORE_PROTOCOLS feature to match on both protocol
      name and number as well regardless of what iptables reports within log
      messages. This is so the user does not have to know what iptables will
      report (which can be inconsistent, e.g. 'TCP' vs. '2' for IGMP).