@@ -1,4 +1,6 @@
 psad-2.4.4 (02//2017):
+    - Added installation support (install.pl and 'psad.service' file) for
+      systems running systemd.
     - Bug fix to not remove auto-blocked IP's from a running psad instance
       with 'psad --Status'.
     - Updated to version 5.2.13 of the whois client.
